--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,41 @@ numpy
 Flask
 gunicorn
 
+
+bard
+SpeechRecognition
+pornhub-api==0.2.0 
+asyncio 
+beautifulsoup4
+
+deepai
+python-whois
+
+Faker
+pydub
+pycountry
+
+apscheduler
+wget
+pyfiglet
+qrcode
+pytz
+future==0.18.3
+search_engine_parser
+
+pyshorteners
+emojis
+telegraph
+unidecode
+gtts
+git+https://github.com/AsmSafone/SafoneAPI
+lexica-api==1.5.1
+httpx==0.25.2
+gpytranslate
+openai==0.28.0
+pickledb
+python-telegram-bot==20.7
+img2pdf
+cloudscraper
+pycryptodome
+opencv-python
