--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -21,7 +21,7 @@ jobs:
           title: Format code.
           body: Automated code formatting.
           labels: ⚫️ black
-          branch: main
+          branch: autofix
           committer: Noob savvy<Noob savvy@users.noreply.github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: true
